--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,13 @@
 /* See: https://www.infragistics.com/products/ignite-ui-angular/angular/components/themes.html */
-@import "~igniteui-angular/lib/core/styles/themes/index";
+//@import "~igniteui-angular/lib/core/styles/themes/index";
 
 $primary: #731963 !default;
 $secondary: #ce5712 !default;
-
-$app-palette: igx-palette($primary, $secondary);
-
-@include igx-core();
-@include igx-theme($app-palette);
+//
+//$app-palette: igx-palette($primary, $secondary);
+//
+//@include igx-core();
+//@include igx-theme($app-palette);
 
 
 html, body {
